# Changelog
# $Id$
nn-nn-11 - Version 5.1.15

   - Fixed an issue where statement comments set via Connection.setStatementComment()
     weren't represented in autoGenerateTestcaseScript=true output.
     
   - Added ability to include the current java thread dump in the exception message
     given for deadlock/wait lock timeout exceptions, enable with 
     "includeThreadDumpInDeadlockExceptions=true" in your JDBC url.

   - Added ability to include current thread name as a statement comment visible
     in MySQL's "SHOW PROCESSLIST" and Innodb deadlock diagnostics, enable with
     "includeThreadNamesAsStatementComment=true".
     
   - Added an SLF4J logging adapter. Enable by adding setting the connection 
     property "logger" to "Slf4JLogger" and placing the appropriate bridge
     from SLF4J to the logging framework of choice in your CLASSPATH. As with
     other Connector/J logging adapters, the log category name used by the 
     driver is "MySQL". See http://www.slf4j.org/manual.html for more details. 
     
12-06-10 - Version 5.1.14

   - Fix for Bug#58728, NPE in com.mysql.jdbc.jdbc2.optional.StatementWrappe.getResultSet()
     if rs is null. Regression test case added to Statement regression tests.

   - Fix for Bug#58751, DatabaseMetadata.getIndexInfo() CARDINALITY now clamped
     to Integer.MAX_VALUE.

   - Fix for BUG#58590
   - Testsuite.Simple.DateTest, MetadataTest, NumbersTest and StatementsTest cleaned and fixed.

   - Testsuite.simple, ConenctionTest & DataSourceTest are up to date. Major rework on 
     ConnectionTest.testDeadlockDetection (Sveta) and testUseCompress.
   
   - Testsuite.simple, CallableStatementTest & CharsetTests are up to date.
   
   - Testsuite.regression SubqueriesRegressionTest and StringRegressionTest are up to date.

   - Testsuite.regression MicroPerformanceRegressionTest, NumbersRegressionTest, PooledConnectionRegressionTest,
     ResultSetRegressionTest are up to date.
