@@ -492,7 +492,7 @@ public class DatabaseMetaData implements java.sql.DatabaseMetaData {
 			JDBC_4_DBMD_SHOW_CTOR = null;
 		}
 		
-		// Current as-of MySQL-5.1.16
+		// Current as-of MySQL-5.5.8
 		String[] allMySQLKeywords = new String[] { "ACCESSIBLE", "ADD", "ALL",
 				"ALTER", "ANALYZE", "AND", "AS", "ASC", "ASENSITIVE", "BEFORE",
 				"BETWEEN", "BIGINT", "BINARY", "BLOB", "BOTH", "BY", "CALL",
@@ -534,7 +534,12 @@ public class DatabaseMetaData implements java.sql.DatabaseMetaData {
 				"UNSIGNED", "UPDATE", "USAGE", "USE", "USING", "UTC_DATE",
 				"UTC_TIME", "UTC_TIMESTAMP", "VALUES", "VARBINARY", "VARCHAR",
 				"VARCHARACTER", "VARYING", "WHEN", "WHERE", "WHILE", "WITH",
-				"WRITE", "X509", "XOR", "YEAR_MONTH", "ZEROFILL" };
+				"WRITE", "X509", "XOR", "YEAR_MONTH", "ZEROFILL",
+		// adding for 5.5.8:
+				"GENERAL", "IGNORE_SERVER_IDS", "MASTER_HEARTBEAT_PERIOD",
+				"MAXVALUE", "RESIGNAL", "SIGNAL", "SLOW"
+		
+		};
 
 		String[] sql92Keywords = new String[] { "ABSOLUTE", "EXEC", "OVERLAPS",
 				"ACTION", "EXECUTE", "PAD", "ADA", "EXISTS", "PARTIAL", "ADD",
