@@ -2,6 +2,8 @@
 # $Id$
 nn-nn-11 - Version 5.1.15
 
+   - Fix for Bug#59224, adding 5.5 reserved words to DatabaseMetaData.getSQLKeywords().
+
    - Fixed an issue where statement comments set via Connection.setStatementComment()
      weren't represented in autoGenerateTestcaseScript=true output.
      
